<resources>
    <string name="app_name">iTime</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">未登录</string>
    <string name="nav_header_subtitle">点击使用微信登录</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_mainpage">计时</string>
    <string name="menu_mark">标签</string>
    <string name="menu_component">小部件</string>
    <string name="menu_color">主题色</string>
    <string name="menu_senior">高级版</string>
    <string name="menu_setting">设置</string>
    <string name="menu_about">关于</string>
    <string name="menu_help">帮助与反馈</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
