<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mainpage"
            android:icon="@drawable/mainpage"
            android:title="@string/menu_mainpage" />
        <item
            android:id="@+id/nav_mark"
            android:icon="@drawable/mark"
            android:title="@string/menu_mark" />
        <item
            android:id="@+id/nav_component"
            android:icon="@drawable/component"
            android:title="@string/menu_component" />
        <item
            android:id="@+id/nav_color"
            android:icon="@drawable/color"
            android:title="@string/menu_color" />
        <item
            android:id="@+id/nav_senior"
            android:icon="@drawable/senior"
            android:title="@string/menu_senior" />
    </group>

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/setting"
        android:title="@string/menu_setting" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/about"
        android:title="@string/menu_about" />
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/help"
        android:title="@string/menu_help" />

</menu>
